GITBOOK-74: change request with no subject merged in GitBook